[package]
name = "sunrise"
version = "0.0.0"
authors = ["P1start"]

[dependencies.piston]
git = "https://github.com/pistondevelopers/piston"
[dependencies.pistoncore-sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"
[dependencies.piston2d-opengl_graphics]
git = "https://github.com/pistondevelopers/opengl_graphics"
[dependencies.piston2d-graphics]
git = "https://github.com/pistondevelopers/graphics"
