[package]
name = "slydot"
version = "0.0.0"
authors = ["P1start"]

[dependencies]
piston = "0.10.1"
piston_window = "0.20.0"
piston2d-opengl_graphics = "0.11.0"
piston2d-graphics = "0.9.0"
#[dependencies.piston]
#git = "https://github.com/pistondevelopers/piston"
#[dependencies.pistoncore-sdl2_window]
#git = "https://github.com/pistondevelopers/sdl2_window"
#[dependencies.piston2d-opengl_graphics]
#git = "https://github.com/pistondevelopers/opengl_graphics"
#[dependencies.piston2d-graphics]
#git = "https://github.com/pistondevelopers/graphics"
